Fixed alignment issue with project partial

--- a/app/assets/stylesheets/projects.css.less
+++ b/app/assets/stylesheets/projects.css.less
@@ -107,7 +107,7 @@
 	font-size: 12px;
 }
 .project-footer {
-	height: 60px;
+	height: 70px;
 	background-color: #f5f5f5;
 	margin-top: -18px;
 	padding-top: 15px;
